--- a/src/css/animations.css
+++ b/src/css/animations.css
@@ -16,3 +16,14 @@
     transform: translateX(-50%) translateY(100%) scale(1);
   }
 }
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(90, 146, 236, 0.4);
+  }
+  70% {
+    box-shadow: 0 0 0 6px rgba(58, 134, 255, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(58, 134, 255, 0);
+  }
+}
